# waozi-website

./: Cargo.toml  config.toml  netlify.toml  shell.nix
content/: _index.md
static/css/: style.css
static/js/: galaxy.js  main.js
templates/: base.html  index.html
